# RemoteExecServer

./: CMakeLists.txt  README.md  client.c  server.c
