cmake_minimum_required(VERSION 3.25)
project(server C)

set(CMAKE_C_STANDARD 11)

add_executable(server server.c)

project(client C)

set(CMAKE_C_STANDARD 11)

add_executable(client client.c)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(client PRIVATE Threads::Threads)
